--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+/* https://palettes.shecodes.io/palettes/1113#palette */
+
 .App-header {
   margin: 30px 0;
 }
@@ -6,4 +8,9 @@
   max-width: 200px;
   display: block;
   margin: 0 auto;
+}
+
+.App-footer {
+  text-align: center;
+  margin: 30px 0;
 }
