--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,9 @@ form {
   text-align: center;
   margin: 30px 0;
 }
+
+.Results,
+.Photos {
+  background-color: white;
+  padding: 50px 8% 0 8%;
+}
